--- a/src/main/resources/css/gallery.css
+++ b/src/main/resources/css/gallery.css
@@ -1,5 +1,35 @@
 .selectedImg {
-    background-color: #f00;
-    border: 5px solid;
-    color: #f00;
+    border: 1px solid;
+    color: #0084ff;
+}
+
+.thumb {
+    margin-bottom: 30px;
+}
+
+.printButton {
+    position: fixed;
+    top: 100px;
+    left: 10px;
+}
+
+.saveButton {
+    position: fixed;
+    top: 50px;
+    left: 10px;
+}
+
+@page Section1 {
+    size: 21cm 29.7cm;
+    margin: 0mm 0mm 0mm 0mm;
+}
+
+div.fullpage {
+    page-break-after: always;
+}
+
+img.fullsize {
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
